Mobile Responsive Update

--- a/public/signup.html
+++ b/public/signup.html
@@ -20,7 +20,7 @@
 <div class="container" style="background-color: white; height: 520px; margin-top: 75px; width: 60%;">
     <div class="row">
       <div>
-        <h4 style="margin-top: 0px;">Sign Up</h4>
+        <h4 class="signup" style="margin-top: 0px;">Sign Up</h4>
         <form class="signup">
           <div class="form-group">
             <label for="exampleName1">Name</label>
