--- a/public/hikes.html
+++ b/public/hikes.html
@@ -8,17 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <style type="text/css">
-        .bgimg {
-            background-image: url("/css/weather.jpg");
-        }
-    </style>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Hike SD</title>
     <nav>
         <div class="nav-wrapper  teal darken-4">
-            <div class="brand-logo center"><i class="large material-icons" style="font-size: 1em;">filter_hdr</i>Hike SD
+            <div id="logo" class="brand-logo center"><i class="large material-icons" style="font-size: 1em;">filter_hdr</i>Hike SD
             </div>
             <ul id="nav-mobile" class="left hide-on-small-and-down">
                 <li style="padding-left: 20px;"><i class="large material-icons" style="font-size: 1.75em;">
@@ -27,7 +22,7 @@
                 <li style="padding-left: 10px; font-size: 18px;">
                     <span class="member-name"></li>
             </ul>
-            <div style="text-align: right; padding-right: 20px;">
+            <div class="logout" style="text-align: right; padding-right: 20px;">
                 <a class="navbar-brand" href="/logout">
                     Logout</a>
             </div>
@@ -36,40 +31,40 @@
 </head>
 
 <body>
-        <div class="container">
-            <div class="row">
-                <div id="1-3miles" class="col s6 xl3"><a class="waves-effect waves-light btn-large teal darken-4"
-                        style="margin-top: 50px;"><i class="material-icons left">child_friendly</i>1-3 mi.</a></div>
-                <div id="3-6miles" class="col s6 xl3"><a class="waves-effect waves-light btn-large teal darken-4"
-                        style="margin-top: 50px;"><i class="material-icons left">directions_walk</i>3-6 mi.</a></div>
-                <div id="6-10miles" class="col s6 xl3"><a class="waves-effect waves-light btn-large teal darken-4"
-                        style="margin-top: 50px;"><i class="material-icons left">directions_run</i>6-10 mi. </a></div>
-                <div id="10miles" class="col s6 xl3"><a class="waves-effect waves-light btn-large teal darken-4"
-                        style="margin-top: 50px;"><i class="material-icons left">directions_bike</i>10 + mi.</a></div>
-            </div>
+    <div class="container" style="text-align: center; width: 100%;">
+        <div class="row">
+            <div id="1-3miles" class="col s12 xl3"><a class="waves-effect waves-light btn-large teal darken-4"
+                    style="margin-top: 50px;"><i class="material-icons left">child_friendly</i>1-3 mi.</a></div>
+            <div id="3-6miles" class="col s12 xl3"><a class="waves-effect waves-light btn-large teal darken-4"
+                    style="margin-top: 50px;"><i class="material-icons left">directions_walk</i>3-6 mi.</a></div>
+            <div id="6-10miles" class="col s12 xl3"><a class="waves-effect waves-light btn-large teal darken-4"
+                    style="margin-top: 50px;"><i class="material-icons left">directions_run</i>6-10 mi. </a></div>
+            <div id="10miles" class="col s12 xl3"><a class="waves-effect waves-light btn-large teal darken-4"
+                    style="margin-top: 50px;"><i class="material-icons left">directions_bike</i>10 + mi.</a></div>
         </div>
-        <div class="container" style="text-align: center; width: 100%;">
-            <div class="row">
-                <div class="card bgimg" style="height: 240px; width: 425px; margin-top: 100px; display: inline-block">
-                    <div id="name" style="font-size: 30px; margin-top: 5px; color: rgb(34, 33, 33);"></div>
-                    <div id="weather" style="margin-top: -5px; font-size: 16px; color: rgb(34, 33, 33);"></div>
-                    <div id="temperature" style="color: white; text-align: center; margin-top: 30px; font-size: 56px;">
-                    </div>
-                    <div class="container" style="color: white; width: 100%; margin-top: -5px; font-size: 16px;">
-                        <div class="row">
-                            <div class="col s6" id="humidity" style="text-align: left;"></div>
-                            <div class="col s6" id="wind" style="text-align: right;"></div>
-                        </div>
+    </div>
+    <div class="container" style="text-align: center; width: 100%;">
+        <div class="row">
+            <div class="card bgimg" style="margin-top: 100px; display: inline-block">
+                <div id="name" style="font-size: 30px; margin-top: 5px; color: rgb(34, 33, 33);"></div>
+                <div id="weather" style="margin-top: -5px; font-size: 16px; color: rgb(34, 33, 33);"></div>
+                <div id="temperature" style="color: white; text-align: center; margin-top: 30px; font-size: 56px;">
+                </div>
+                <div class="container" style="color: white; width: 100%; margin-top: -5px; font-size: 16px;">
+                    <div class="row">
+                        <div class="col s6" id="humidity" style="text-align: left;"></div>
+                        <div class="col s6" id="wind" style="text-align: right;"></div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="container" style="text-align: center;">
-            <div class="row">
-                <div id="hikes"></div>
-            </div>
+    <div class="container" style="text-align: center;">
+        <div class="row">
+            <div id="hikes"></div>
         </div>
+    </div>
     </div>
 
 
