Mobile Responsive Update

--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
   <title>Hike SD</title>
   <nav>
     <div class="nav-wrapper  teal darken-4">
-      <a class="brand-logo center">Hike SD</a>
+      <a class="brand-logo center"><i class="large material-icons" style="font-size: 1em;">filter_hdr</i>Hike SD</a>
     </div>
   </nav>
 </head>
