--- a/public/hikes.html
+++ b/public/hikes.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <div class="container" style="text-align: center; width: 100%;">
+    <div class="container" style="text-align: center;">
         <div class="row">
             <div id="1-3miles" class="col s12 xl3"><a class="waves-effect waves-light btn-large teal darken-4"
                     style="margin-top: 50px;"><i class="material-icons left">child_friendly</i>1-3 mi.</a></div>
@@ -45,7 +45,7 @@
     </div>
     <div class="container" style="text-align: center; width: 100%;">
         <div class="row">
-            <div class="card bgimg" style="margin-top: 100px; display: inline-block">
+            <div id="weatherCard" class="card bgimg" style="display: inline-block">
                 <div id="name" style="font-size: 30px; margin-top: 5px; color: rgb(34, 33, 33);"></div>
                 <div id="weather" style="margin-top: -5px; font-size: 16px; color: rgb(34, 33, 33);"></div>
                 <div id="temperature" style="color: white; text-align: center; margin-top: 30px; font-size: 56px;">
