--- a/public/hikes.html
+++ b/public/hikes.html
@@ -11,9 +11,12 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Hike SD</title>
+    <meta property="og:description" content="Hike-SD is a hiking application specific to the San Diego area which allows users to search hikes based on trail and record if they have hiked a given trail." />
+    <meta property="og:image" content="https://hike-sd.herokuapp.com/GitHub-Images/Hike-SD-Homepage.png" />
     <nav>
         <div class="nav-wrapper  teal darken-4">
-            <div id="logo" class="brand-logo center"><i class="large material-icons" style="font-size: 1em;">filter_hdr</i>Hike SD
+            <div id="logo" class="brand-logo center"><i class="large material-icons"
+                    style="font-size: 1em;">filter_hdr</i>Hike SD
             </div>
             <ul id="nav-mobile" class="left hide-on-small-and-down">
                 <li style="padding-left: 20px;"><i class="large material-icons" style="font-size: 1.75em;">
