--- a/public/signup.html
+++ b/public/signup.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="css/styles.css" />
   <title>Hike SD</title>
+  <meta property="og:description" content="Hike-SD is a hiking application specific to the San Diego area which allows users to search hikes based on trail and record if they have hiked a given trail." />
+    <meta property="og:image" content="https://hike-sd.herokuapp.com/GitHub-Images/Hike-SD-Homepage.png" />
   <nav>
     <div class="nav-wrapper  teal darken-4">
       <a class="brand-logo center"><i class="large material-icons" style="font-size: 1em;">filter_hdr</i>Hike SD</a>
